edits made to fuel poverty section

--- a/paper/Paper_1_v02.Rmd
+++ b/paper/Paper_1_v02.Rmd
@@ -20,15 +20,15 @@ To do.
 
 # Domestic energy consumption in a UK context 
 
-The UK continues to see domestic energy usage levels increase as an overall percentage of the countries consumption. In 2016, it accounted for 29% of overall usage - a decrease from previous years 35% in 2013 - but higher than the EU average which stood at 25.45% [@eurostatcom]. These fluctuations are part of a larger upward trend overall, which has seen domestic energy consumption increase markedly from the 1970s by 12%, with short term fluctuations being accounted for by the effect of mean air temperature year on year [@beiscom https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/633503/ECUK_2017.pdf].
+The UK continues to see domestic energy usage levels increase as an overall percentage of the countries consumption. In 2016, it accounted for 29% of overall usage - a decrease from previous years 35% in 2013 - but higher than the EU average which stood at 25.45% [@Eurostat]. These fluctuations are part of a larger upward trend overall, which has seen domestic energy consumption increase markedly from the 1970s by 12%, with short term fluctuations being accounted for by the effect of mean air temperature year on year [@Strategy].
 
 Previous research has shown that a series of socio-demographic attributes influence the extent to which energy usage can be understood in the context of derpivation levels, including income, housing tenure and number of appliances. Indeed other research also covers factors such as dwelling characteristics and psychological and behavioural factors behind consumption patterns, which whilst important, are beyond the scope of this paper. Spatial variations have also previously been examined, but largely in reference to weather and temperature impacting upon consumption. 
 
-Primarily in response to concerns over reaching the targets laid out in the 2008 climate change act, central policy measures have been introduced to support and encourage reductions in energy usage, particularly in the domestic setting. Smart Meters are high on the UK government's energy efficiency agenda in order to align with those proposed targets. The UK government set goals of a 29% decrease in the domestic category [@HMGovernment2009] and for the transition to smart metering to be complete for both gas and electriciy by 2020 [@Haben]. With a top - down outlook, by upgrading the UK infrastructure to a 'Smart Grid' there is the potential for "solving a lot of our energy problems" [@smartgridcom; @Stern2011].Smart meters enable the smart grid by providing real-time data on the consumption of energy [@smartgridcom; @guerreiro2015making], therfore it will improve reliability, better match supply and demand and allow more efficient planning for both short and long term future; by being more secure, planning ahead for unexpected power outages and informing the number of power stations the UK is likely to need in the future. 
+Primarily in response to concerns over reaching the targets laid out in the 2008 climate change act, central policy measures have been introduced to support and encourage reductions in energy usage, particularly in the domestic setting. Smart Meters are high on the UK government's energy efficiency agenda in order to align with those proposed targets. The UK government set goals of a 29% decrease in the domestic category [@HMGovernment2009] and for the transition to smart metering to be complete for both gas and electriciy by 2020 [@haben2016analysis]. With a top - down outlook, by upgrading the UK infrastructure to a 'Smart Grid' there is the potential for "solving a lot of our energy problems" [@smartgridcom; @Stern2011].Smart meters enable the smart grid by providing real-time data on the consumption of energy [@smartgridcom; @guerreiro2015making], therfore it will improve reliability, better match supply and demand and allow more efficient planning for both short and long term future; by being more secure, planning ahead for unexpected power outages and informing the number of power stations the UK is likely to need in the future. 
 
 Given the establishment of these targets, there is an operational setting in which Domestic Energy Providers (DEPs) are under increasing pressure to ensure their customers are on the most efficient and affordable tariffs, driving a demand for smart meter installations and bringing an end to pre-paid meters and estimated bills, which are often far more expensive than actual bills, but are also the most likely tariffs to be held by those in or near fuel poverty. These personalised tariffs will enable the DEPs to offer access to cheap energy when demand is at its lowest.
 
-Energy meters have been an essential but modest element of the infrastructure in UK households since the early 20th century - firstly gas, and then with the invention of alternating current, electricity - both being produced on a large, saleable scale. By the turn of the century many improvements had been made to the original model inside peoples homes; reductions in weight and dimension and improving longterm stability. These induction meters are still widely produced today in their modern form, and are popular due to their low production price and excellent reliability [@meteringcom]. Yet for those reasons mentioned above, they are falling out of favour with policy makers, energy providers and consumers as they all look for a more efficient and affordable way to monitor energy consumption.  
+Energy meters have been an essential but modest element of the infrastructure in UK households since the early 20th century - firstly gas, and then with the invention of alternating current, electricity - both being produced on a large, saleable scale. By the turn of the century many improvements had been made to the original model inside peoples homes; reductions in weight and dimension and improving longterm stability. These induction meters are still widely produced today in their modern form, and are popular due to their low production price and excellent reliability. Yet for those reasons mentioned above, they are falling out of favour with policy makers, energy providers and consumers as they all look for a more efficient and affordable way to monitor energy consumption.  
 
 As such, the overarching aim of this paper is twofold; to address our ability to understand aggregate patterns of domestic energy consumption, specifically by exploring the representativeness and spatio-temporal signatures of aggregate residential energy consumption as recorded by a national extract of smart meter data provided by one of the 5 largest energy providers in the UK; and secondly, to evaluate the socio-demographic determinants of recorded energy consumption; and their relationship to fuel poverty. This analysis capitalises on data provided to the Consumer Data Research Centre (CDRC) by the DEP for the financial year 2015 - 16 across the UK. To the authors knowledge this is the first dataset of it's kind to be analysed at the half hourly cadence and the first energy study in the UK to take both gas and electricity data in tandem and in such detail.
 
@@ -53,7 +53,7 @@ Characteristics associated with the dwelling itself have also been linked to occ
 On the international scale, the increased release of greenhouse gases into the atmosphere has caused an rise in global temperatures of 0.8&deg;C  since 1880 - but two thirds of this warming has occured since 1975 [@Observatory]. According to the IEA (International Energy Association), energy efficiency can contribute up to 49% of the energy related CO2 emission reductions that are nedded to limit global temperature increases to less than 2&deg;C by 2050. "Energy efficiency, including energy conversation, is a long-term priority for G20 members, as it constitures the optimum utilisation of energy resources" [G20 https://ec.europa.eu/energy/sites/ener/files/documents/G20%20Energy%20Efficiency%20Leading%20Programme.pdf] (pp.4). G20 members account for over 80% of both global energy consumption and greenhouse gases but have proven experience in "energy efficiency measures and in achieving energy reductions". From 1990 to 2013,the G20s total energy consumption savings reached about 4.3 billion TOE (define TOE) and about 10.4 billion tonnes of carbon dioxide emissions were avoided. Energy efficiency is one of the most important mechanisms through which countries can act to mitigate climate change in the short to long term.   
 
 
-At the EU scale, the UK is one of the worst offenders for domestic energy consumption; the EU average was 25.4% of final energy consumption in 2016 [@eurostat] whereas the UK sat at 29% in 2015. This could however, possibly be explained by the relative age of the UK housing stock in comparision to the rest of the EU, with many houses dating from the Victorian era. As a result, many houses are poorly insulated and ultimately consume more to maintain a given level of comfort [@beiscom]. The Euro 2020 energy strategy stipulates that all countries must aim to reduce greenhouse gas emissions by 20% and to make a 20% improvement in energy efficiency. The current strategy is unlikely to achieve these targets, but the report pin points smart meters and power grids as the key to full exploitation of the potential for energy savings [@eu2020 http://eur-lex.europa.eu/legal-content/EN/TXT/PDF/?uri=CELEX:52010DC0639&from=EN]. [@eurostat http://ec.europa.eu/eurostat/statistics-explained/index.php/Energy_consumption_in_households], 
+At the EU scale, the UK is one of the worst offenders for domestic energy consumption; the EU average was 25.4% of final energy consumption in 2016 [@Eurostat] whereas the UK sat at 29% in 2015. This could however, possibly be explained by the relative age of the UK housing stock in comparision to the rest of the EU, with many houses dating from the Victorian era. As a result, many houses are poorly insulated and ultimately consume more to maintain a given level of comfort [@Strategy]. The Euro 2020 energy strategy stipulates that all countries must aim to reduce greenhouse gas emissions by 20% and to make a 20% improvement in energy efficiency. The current strategy is unlikely to achieve these targets, but the report pin points smart meters and power grids as the key to full exploitation of the potential for energy savings [@eu2020].
 
 Increased demand in energy globally and continentally leads to a real price increase for domestic consumers in the UK. The average household spend on fuel has risen from X in X to X in X. As discussed, the UK has set targets in terms of a reduction in consumption and emissions, but has also commited to reducing the number of people who find themselves in fuel poverty because of these increased prices. Fuel poverty is a pertinent issue in the UK as the gap widens and people who have both a low income and high fuel costs find themselves deeper into fuel poverty as prices continue to rise well over and above rates of inflation. 
 
@@ -115,15 +115,29 @@ This low usage can again be attributed to living in smaller accommodation, but i
 
 This exploration led to agreement that there was a definitive link between energy consumption and deprivation levels. 
 
-# Fuel poverty 
+# The dichotomy between energy and fuel poverty 
 
-According to the UK government, a house is considered to be in fuel poverty if "They have required fuel costs that are above average *and* if they were to spend that amount they would be left with a residual income below the official poverty line." It is stated that the main drivers are "household incomes, household energy efficiency and fuel prices".
+In countries both developed and developing, all forms of energy and fuel poverty are sustained by a common condition; "the inability to attain a socially and materially necessitated level of domestic energy services" [@Bouzarovski2015] (pp. 31). The two terms have utility across several realms and whilst conventioanlly might be thought of as a matter of social justice and more generally, social inequalities, it has also been conflated with environmental justice [@Walker2012]. It is @Bouzarovski2015 who unpacks this dichotomy between the two terms comparing the principal elements; the driving force of fuel poverty is the high or rising energy prices, low incomes and inefficient housing stock, whereas energy poverty is driven by lack of networked energy provisions due to economic under-development. Energy poverty is expressed through a lack of access to adequate facilites and consequnetly is linked to detrimental impacts on health, gender, inequality, education and economic development more generally. Fuel poverty however mostly manifests through inadequate heating in the home and the importance of services such as lighting and appliances and leads to both long term and short term mental and physical health problems. it is through these elements that the differences become clearer and we see that it can be understood that fuel poverty is used to refer to the societal inequalities and it is energy poverty, broadly speaking that emcompasses the environmental framing of this domestic energy deprivation. 
 
-These official statistics corroborate the findings thus far that those in the private rented sector are the most likely to be in fuel poverty 
+With increasing fuel prices, pressure to tackle fuel poverty has been increasing across Europe and there are a growing number of national policy frameworks to define, measure and alleviate the phenomenon. In contrast, the European Commission has stated that a pan-European definition would be inappropriate due to the diverse energy contexts found across the EU [@thomson2016]. It is only recently that fuel poverty has gained leverage in national political, practioner and academic agenda, with France, Spain, Germany and Belgium amongst others engaging in this 'widely recognised societal challenge [@Bouzarovski2015].
 
+According to the UK government, a house is considered to be in fuel poverty if "They have required fuel costs that are above average **and** if they were to spend that amount they would be left with a residual income below the official poverty line." It is stated that the main drivers are "household incomes, household energy efficiency and fuel prices". This definition of fuel poverty has important policy implications; for the formulation of, determining it's scale and nature, targeting a strategy and monitoring progress [@Moore2012]. @Boardman1991 was the first to give a formal definiton in her book *Fuel Poverty*. This is the first mention of the 10% threshold, which has become commonplace for policymakers when defining the fuel poor, and is the basis for the current definition used by the DECC and other major stakeholders [@Liddell2012].   
 
+# Fuel poverty and the relationship with smart meter users
+ 
 To get a deeper understanding of the demographic characteristics of Smart Meter users, census data was appended to the energy usage data. This had to be reweighted from output area level to be reapportioned to postcode sector level. This was done using the postcode headcount dataset, and an output area to postcode sector lookup table for calculating proportions. (This method is preferable to the GIS method of creating a shapefile based on overlapping boundaries as this is prone to inaccuracies such as slither polygons and is computationally much more intensive).  
 
-A townsend score - a measure of relative deprivation - is made up of four census variables and has utility for understanding deprivation as it adheres most closely to the concepts of material disadvantage [@Morris1991]. These four index variables; percentage of homes with access to a car or van, percentage of homes with more than 1 person per room, percentage of homes not owner occupied and percentage of people economically active yet unemployed; are totaled and converted to a z-score [@Townsend1987]. Because this was to be used in tandem with the energy data, an original townsend score was calculated from the reweighted census variables at the PCS scale.
+A townsend score - a measure of relative deprivation - is made up of four census variables and holds utility for understanding deprivation as it adheres most closely to the concepts of material disadvantage [@Morris1991]. The four index variables; percentage of homes with access to a car or van, percentage of homes with more than 1 person per room, percentage of homes not owner occupied and percentage of people economically active yet unemployed; are totaled and converted to a z-score [@Townsend1987]. Because this was to be used in tandem with the energy data, an original townsend score was calculated from the reweighted census variables at the PCS scale.
 
-A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.  The total daily usage was used in the final model 
+The literature time and again refers to accomodation type as a major factor in deprivation levels. The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. 
+
+A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.
+
+The deprivation model explained R^2^ = 15.54% (adjusted R2 = 15.49%) of the variability in domestic energy consumption, p < 2.2e-16.
+
+A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefor more rooms need heating and lighting (which account for X amount of average consumption). This model also suggests that as Townsend scores increase, energy usage decreases, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses.
+
+
+# Conclusions and future work. 
+
+# Bibliography 
