--- a/paper/Paper_1_v02.Rmd
+++ b/paper/Paper_1_v02.Rmd
@@ -129,7 +129,7 @@ To get a deeper understanding of the demographic characteristics of Smart Meter 
 
 A townsend score - a measure of relative deprivation - is made up of four census variables and holds utility for understanding deprivation as it adheres most closely to the concepts of material disadvantage [@Morris1991]. The four index variables; percentage of homes with access to a car or van, percentage of homes with more than 1 person per room, percentage of homes not owner occupied and percentage of people economically active yet unemployed; are totaled and converted to a z-score [@Townsend1987]. Because this was to be used in tandem with the energy data, an original townsend score was calculated from the reweighted census variables at the PCS scale.
 
-The literature time and again refers to accomodation type as a major factor in deprivation levels. The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. 
+The literature time and again refers to accomodation type as a major factor in deprivation levels. The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. Given the prevalence of accommodation factors in the groups which stood out in the OAC descriptive statistics it was considered pertinent to include a housing variable in the model to establish it's relationship with fuel usgae and poverty. 
 
 A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.
 
