further edits to draft

--- a/paper/Paper_1_v02.Rmd
+++ b/paper/Paper_1_v02.Rmd
@@ -50,7 +50,7 @@ Characteristics associated with the dwelling itself have also been linked to occ
 
 # The impact of ever increasing energy consumption and the growing need for energy efficiency.
 
-On the international scale, the increased release of greenhouse gases into the atmosphere has caused an rise in global temperatures of 0.8&deg;C  since 1880 - but two thirds of this warming has occured since 1975 [@Observatory]. According to the IEA (International Energy Association), energy efficiency can contribute up to 49% of the energy related CO2 emission reductions that are nedded to limit global temperature increases to less than 2&deg;C by 2050. "Energy efficiency, including energy conversation, is a long-term priority for G20 members, as it constitures the optimum utilisation of energy resources" [G20 https://ec.europa.eu/energy/sites/ener/files/documents/G20%20Energy%20Efficiency%20Leading%20Programme.pdf] (pp.4). G20 members account for over 80% of both global energy consumption and greenhouse gases but have proven experience in "energy efficiency measures and in achieving energy reductions". From 1990 to 2013,the G20s total energy consumption savings reached about 4.3 billion TOE (define TOE) and about 10.4 billion tonnes of carbon dioxide emissions were avoided. Energy efficiency is one of the most important mechanisms through which countries can act to mitigate climate change in the short to long term.   
+On the international scale, the increased release of greenhouse gases into the atmosphere has caused an rise in global temperatures of 0.8&deg;C  since 1880 - but two thirds of this warming has occured since 1975 [@Observatory]. According to the IEA (International Energy Association), energy efficiency can contribute up to 49% of the energy related CO2 emission reductions that are nedded to limit global temperature increases to less than 2&deg;C by 2050. "Energy efficiency, including energy conversation, is a long-term priority for G20 members, as it constitures the optimum utilisation of energy resources" [@G20-2020] https://ec.europa.eu/energy/sites/ener/files/documents/G20%20Energy%20Efficiency%20Leading%20Programme.pdf] (pp.4). G20 members account for over 80% of both global energy consumption and greenhouse gases but have proven experience in "energy efficiency measures and in achieving energy reductions". From 1990 to 2013,the G20s total energy consumption savings reached about 4.3 billion TOE (define TOE) and about 10.4 billion tonnes of carbon dioxide emissions were avoided. Energy efficiency is one of the most important mechanisms through which countries can act to mitigate climate change in the short to long term.   
 
 
 At the EU scale, the UK is one of the worst offenders for domestic energy consumption; the EU average was 25.4% of final energy consumption in 2016 [@Eurostat] whereas the UK sat at 29% in 2015. This could however, possibly be explained by the relative age of the UK housing stock in comparision to the rest of the EU, with many houses dating from the Victorian era. As a result, many houses are poorly insulated and ultimately consume more to maintain a given level of comfort [@Strategy]. The Euro 2020 energy strategy stipulates that all countries must aim to reduce greenhouse gas emissions by 20% and to make a 20% improvement in energy efficiency. The current strategy is unlikely to achieve these targets, but the report pin points smart meters and power grids as the key to full exploitation of the potential for energy savings [@eu2020].
@@ -115,27 +115,35 @@ This low usage can again be attributed to living in smaller accommodation, but i
 
 This exploration led to agreement that there was a definitive link between energy consumption and deprivation levels. 
 
-# The dichotomy between energy and fuel poverty 
+# Policy impacts from the dichotomy between energy poverty and fuel poverty 
 
 In countries both developed and developing, all forms of energy and fuel poverty are sustained by a common condition; "the inability to attain a socially and materially necessitated level of domestic energy services" [@Bouzarovski2015] (pp. 31). The two terms have utility across several realms and whilst conventioanlly might be thought of as a matter of social justice and more generally, social inequalities, it has also been conflated with environmental justice [@Walker2012]. It is @Bouzarovski2015 who unpacks this dichotomy between the two terms comparing the principal elements; the driving force of fuel poverty is the high or rising energy prices, low incomes and inefficient housing stock, whereas energy poverty is driven by lack of networked energy provisions due to economic under-development. Energy poverty is expressed through a lack of access to adequate facilites and consequnetly is linked to detrimental impacts on health, gender, inequality, education and economic development more generally. Fuel poverty however mostly manifests through inadequate heating in the home and the importance of services such as lighting and appliances and leads to both long term and short term mental and physical health problems. it is through these elements that the differences become clearer and we see that it can be understood that fuel poverty is used to refer to the societal inequalities and it is energy poverty, broadly speaking that emcompasses the environmental framing of this domestic energy deprivation. 
 
 With increasing fuel prices, pressure to tackle fuel poverty has been increasing across Europe and there are a growing number of national policy frameworks to define, measure and alleviate the phenomenon. In contrast, the European Commission has stated that a pan-European definition would be inappropriate due to the diverse energy contexts found across the EU [@thomson2016]. It is only recently that fuel poverty has gained leverage in national political, practioner and academic agenda, with France, Spain, Germany and Belgium amongst others engaging in this 'widely recognised societal challenge [@Bouzarovski2015].
 
-According to the UK government, a house is considered to be in fuel poverty if "They have required fuel costs that are above average **and** if they were to spend that amount they would be left with a residual income below the official poverty line." It is stated that the main drivers are "household incomes, household energy efficiency and fuel prices". This definition of fuel poverty has important policy implications; for the formulation of, determining it's scale and nature, targeting a strategy and monitoring progress [@Moore2012]. @Boardman1991 was the first to give a formal definiton in her book *Fuel Poverty*. This is the first mention of the 10% threshold, which has become commonplace for policymakers when defining the fuel poor, and is the basis for the current definition used by the DECC and other major stakeholders [@Liddell2012].   
+According to the UK government, a house is considered to be in fuel poverty if "They have required fuel costs that are above average **and** if they were to spend that amount they would be left with a residual income below the official poverty line." It is stated that the main drivers are "household incomes, household energy efficiency and fuel prices" [@DECC2017]. This definition of fuel poverty has important policy implications; for the formulation of, determining it's scale and nature, targeting a strategy and monitoring progress [@Moore2012]. @Boardman1991 was the first to give a formal definiton in her book *Fuel Poverty*. This is the first mention of the 10% threshold, which has become commonplace for policymakers when defining the fuel poor, and is the basis for the current definition used by the DECC and other major stakeholders [@Liddell2012].  
+
+Fuel poverty in England is measured using the Low Income High Cost indicator, which as a dual indicator allows the measurement of both the extent of the problem and the depth of the problem [@DECC2017]. 
 
 # Fuel poverty and the relationship with smart meter users
  
-To get a deeper understanding of the demographic characteristics of Smart Meter users, census data was appended to the energy usage data. This had to be reweighted from output area level to be reapportioned to postcode sector level. This was done using the postcode headcount dataset, and an output area to postcode sector lookup table for calculating proportions. (This method is preferable to the GIS method of creating a shapefile based on overlapping boundaries as this is prone to inaccuracies such as slither polygons and is computationally much more intensive).  
+To get a deeper understanding of the demographic characteristics of Smart Meter users, census data was appended to the energy usage data. It had to be reweighted from output area level to be reapportioned to postcode sector level which was done achieved the postcode headcount dataset, and an output area to postcode sector lookup table for calculating proportions. (Testing revealed this method is preferable to the GIS method of creating a shapefile based on overlapping boundaries as this is prone to inaccuracies such as slither polygons and is computationally much more intensive).  
 
 A townsend score - a measure of relative deprivation - is made up of four census variables and holds utility for understanding deprivation as it adheres most closely to the concepts of material disadvantage [@Morris1991]. The four index variables; percentage of homes with access to a car or van, percentage of homes with more than 1 person per room, percentage of homes not owner occupied and percentage of people economically active yet unemployed; are totaled and converted to a z-score [@Townsend1987]. Because this was to be used in tandem with the energy data, an original townsend score was calculated from the reweighted census variables at the PCS scale.
 
-The literature time and again refers to accomodation type as a major factor in deprivation levels. The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. Given the prevalence of accommodation factors in the groups which stood out in the OAC descriptive statistics it was considered pertinent to include a housing variable in the model to establish it's relationship with fuel usgae and poverty. 
+The literature time and again refers to accomodation type as a major factor in energy consumption. This is because the type of accommodation a person lives is a good proxy for their usage habits; for example those who live alone will consume much less energy than a family with three children for a multitude of reasons; a large family are more likely to occupy a home with a larger floor space as their need is greater. They therefore have more rooms which require heating and lighting, and they will likely have a higher number of appliances, and or use these appliances such as the dishwsher or washing machine much more frequently than a single person living alone to achieve the same level of comfort.
 
-A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.
+It is also true to say that the UKs housing stock is currently much older than that in the rest of Europe. This goes some way to explaining the relative higher consumption but also at an individual level, post-war terrace houses are still extremely common, but are poorly insulated and in need of updating. Those families living in large detached and semi-detached houses are also more likely to be owner occupiers, and the DECC stated in their latest report that it is the disconnect between tenants and landlords that stands in the way of privately rented homes becoming more energy efficient, because it is unclear who should pay for and benefit from the efficiency measures. Private renters are the most likely to be in the deepest fuel poverty. 
 
-The deprivation model explained R^2^ = 15.54% (adjusted R2 = 15.49%) of the variability in domestic energy consumption, p < 2.2e-16.
+Accommodation type is also indicative 
 
-A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefor more rooms need heating and lighting (which account for X amount of average consumption). This model also suggests that as Townsend scores increase, energy usage decreases, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses.
+The model ran attempts to explain the energy consumption by levels of deprivation. 
+
+The deprivation model ran here included the proportion of accomodation types in each PCS; detached, semi-detached, terrace, flat or shared accomodation. Due to the size of two of the groups, flats and shared accommodation were combined. As the largest category overall, semi-detached was used as the reference category. As can be seen in the OAC group pen profiles, deprivation and housing type are closely linke so it was important to control for it to avoid the Townsend score returning a significant result as it is being used as a proxy for type of accomodation.
+
+A daily temporal profile was calculated showing total energy usage per day; these were combined with the PCS townsend scores and accomodation types and a linear regression model ran.The energy consumption model explained R^2^ = 15.54% (adjusted R2 = 15.49%) of the variability in domestic energy consumption, p < 2.2e-16, suggesting that these results have not occured randomly.
+
+A detached and typically larger house than the reference category (semi-detached) would use on average an extra 1953.2 kW per day in comparison, whereas a smaller terrace house would use less to the sum of 135.5 kW per day. Detached houses typically have a greater number of rooms and lower levels of overcrowding, therefor more rooms need heating and lighting (which account for 60% amount of average consumption). This model also suggests that as Townsend scores increase, energy usage decreases overall, which as a measure of deprivation is to be expected – the higher the level of deprivation the less likely people are to be able to afford to be wasteful and consume unnecessary energy. They are also likely to live in smaller houses with lower heating and lighting requirement, own and use fewer appliances and have smaller families.
 
 
 # Conclusions and future work. 
